SIMD enhancements